[package]
name = "tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
fs2 = "0.4.3"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation"] }

