[package]
name = "tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
eframe = "0.34.3"
egui = "0.34.3"
fs2 = "0.4.3"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation", "Win32_Media_Audio", "Win32_System_Com", "Win32_Media_Audio_Endpoints", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_System_Registry"] }

